# ETLGateway

./: .gitignore  Cargo.toml  ddl.sql  flake.nix  justfile
src/: federation_event_processor.rs  incoming.rs  main.rs  outgoing.rs
