[package]
name = "etl_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
fedimint-core = "0.7.0"
fedimint-eventlog = "0.7.0"
fedimint-gateway-client = "0.7.0"
fedimint-gateway-common = "0.7.0"
fedimint-logging = "0.7.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
], default-features = false }
tokio = { version = "1.40.0", features = [ "full" ]}
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
url = "2.5.2"
